--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,8 @@
     "name": "marlon-be/marlon-sips",
     "autoload": {
         "psr-0": { "Sips": "lib/" }
+    },
+    "require": {
+        "ext-intl": "*"
     }
 }
