--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,10 @@
-{   
+{
     "name": "marlon-be/marlon-sips",
     "autoload": {
         "psr-0": { "Sips": "lib/" }
+    },
+    "require": {
+        "php": ">=5.3",
+        "jbroadway/urlify": "^1.1"
     }
 }
