--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,8 @@
     "require": {
         "php": ">=5.3",
         "jbroadway/urlify": "^1.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.1.0"
     }
 }
